# cicconf

./: Makefile  README.rst  pyproject.toml  setup.py
.github/workflows/: main.yml  release.yml
cicconf/: __init__.py  cmdip.py  command.py  config.py  entry.py
docs/: Gemfile  _config.yml  clone.md  config.md  index.md  newip.md  pull.md  status.md  update.md
