[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cicconf"
version = "0.1.9"
authors = [
  { name="Carsten Wulff", email="carsten@wulff.no" },
]
dependencies = [
  "GitPython",
  "click",
  "matplotlib",
  "PyYAML",
  "rich"
]
license = { text= "MIT" }
description = "Configuration and Revision tool"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    'Intended Audience :: Science/Research',
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[project.scripts]
cicconf = "cicconf.entry:cli"


[project.urls]
"Homepage" = "https://github.com/wulffern/cicconf"
"Bug Tracker" = "https://github.com/wulffern/cicconf/issues"
